TMT-26: fix cropper

--- a/assets/css/components/parts/modals/chose-upload-images-modal.scss
+++ b/assets/css/components/parts/modals/chose-upload-images-modal.scss
@@ -8,6 +8,8 @@
   align-items: center;
   justify-content: center;
   height: 40vh;
+  margin-left: 10px;
+  margin-right: 10px;
 
 
   .chose-background {
